# eva-sub-cli

./: .gitignore  Getting_Started_with_eva_sub_cli.md  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/workflows/: publish_packages.yml  tests.yml
cli/: __init__.py  auth.py  docker_validator.py  eva_sub_cli.py  lsri_auth.py  nextflow_validator.py  report.py  reporter.py  samples_checker.py  submit.py  validator.py  xlsx2json.py
cli/etc/: eva-biosamples.json  eva_schema.json  spreadsheet2json_conf.yaml
cli/jinja_templates/: file_validation.html  html_report.html  metadata_validation.html  sample_name_check.html
cli/nextflow/: validation.nf
conda/: build.sh  meta.yaml
docker/: Dockerfile
eva_sub_cli/: __init__.py  auth.py  date_utils.py  docker_validator.py  eva_sub_cli.py  file_utils.py  main.py  metadata_utils.py  native_validator.py  orchestrator.py  report.py  reporter.py  samples_checker.py  semantic_metadata.py  submission_ws.py  submit.py  utils.py  validator.py
eva_sub_cli/etc/: EVA_Submission_template.xlsx  eva_schema.json  spreadsheet2json_conf.yaml
eva_sub_cli/exceptions/: submission_not_found_exception.py  submission_status_exception.py
eva_sub_cli/executables/: check_fasta_insdc.py  check_metadata_semantics.py  cli.py  samples_checker.py  trim_down.py  xlsx2json.py
eva_sub_cli/jinja_templates/: fasta_check.html  file_validation.html  html_report.html  metadata_validation.html  (+3 more)
tests/: docker_validator_test.py  ignore_test_nextflow_validation.yml  test_auth.py  test_check_fasta_insdc.py  test_cli.py  test_docker_validator.py  test_file_utils.py  test_genome_checker.py  test_main.py  test_orchestrator.py  test_report.py  test_reporter.py  test_samples_checker.py  test_semantic_metadata.py  test_submit.py  test_utils.py  test_validaton_results_parsers.py  test_validator.py  test_xlsx2json.py
(+29 files in other folders)
